accessible/generic/LocalAccessible.cpp
@@ -3088,7 +3088,7 @@ void LocalAccessible::SendCache(uint64_t aCacheDomain,
       BundleFieldsForCache(aCacheDomain, aUpdateType);
   nsTArray<CacheData> data;
   data.AppendElement(CacheData(ID(), fields));
-  ipcDoc->SendCache(aUpdateType, data, true);
+  ipcDoc->SendCache(aUpdateType, data, false);
 
   if (profiler_thread_is_being_profiled_for_markers()) {
     nsAutoCString updateTypeStr;
